--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Responsive Design</span> <i class="val">95%</i></span>
+              <span class="skill"><span>Mobile Responsive</span> <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
