--- a/index.html
+++ b/index.html
@@ -393,9 +393,9 @@
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">WordPress Custom Theme</li>
-            <li data-filter=".filter-product">wordpress Builder</li>
-            <li data-filter=".filter-branding">HTML/CSS/JavaScript</li>
             <li data-filter=".filter-books">WordPress Custom Plugins</li>
+            <li data-filter=".filter-product">WordPress Page Builder</li>
+            <li data-filter=".filter-branding">HTML/CSS/JavaScript</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
