--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">WordPress Custom Theme</li>
+            <li data-filter=".filter-app">WordPress Custom Themes</li>
             <li data-filter=".filter-books">WordPress Custom Plugins</li>
             <li data-filter=".filter-product">WordPress Page Builder</li>
             <li data-filter=".filter-branding">HTML/CSS/JavaScript</li>
