--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">WordPress Custom Themes</li>
-            <li data-filter=".filter-books">WordPress Custom Plugins</li>
-            <li data-filter=".filter-product">WordPress Page Builder</li>
+            <li data-filter=".filter-app">WordPress Websites</li>
+            <li data-filter=".filter-books">WordPress Plugins</li>
+            <li data-filter=".filter-product">WordPress WooCommerce</li>
             <li data-filter=".filter-branding">HTML/CSS/JavaScript</li>
           </ul><!-- End Portfolio Filters -->
 
