--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/img/favicon.png" rel="icon">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="https://usamakhalid847.github.io/portfolio/assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio
@@ -42,12 +42,12 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="https://usamakhalid847.github.io/portfolio/assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
-    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+    <a href="https://usamakhalid847.github.io/portfolio/" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+      <!-- <img src="https://usamakhalid847.github.io/portfolio/assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Alex Smith</h1>
     </a>
 
@@ -97,7 +97,7 @@
         <h1 class="mb-2 mb-lg-0">Portfolio Details</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://usamakhalid847.github.io/portfolio/">Home</a></li>
             <li class="current">Portfolio Details</li>
           </ol>
         </nav>
@@ -133,19 +133,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/branding-1.jpg" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/books-1.jpg" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-1.jpg" alt="">
                 </div>
 
               </div>
@@ -203,19 +203,19 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/aos/aos.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="https://usamakhalid847.github.io/portfolio/assets/js/main.js"></script>
 
 </body>
 
