--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Below is my resume, highlighting my experience and education. Take a look to learn more about my professional journey and expertise.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
