--- a/index.html
+++ b/index.html
@@ -317,12 +317,11 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Usama Khalid</h4>
+              <p><em>Experienced Web Developer with 3+ years of expertise in WordPress, PHP, and front-end technologies, specializing in custom themes, plugins, and seamless user experiences. Passionate about problem-solving, performance optimization, and delivering high-quality solutions.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Lahore, Pakistan</li>
+                <li>usamakhalid847@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
