--- a/index.html
+++ b/index.html
@@ -327,17 +327,17 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>BSCS</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Virtual University, Pakistan</em></p>
+              <p>Pursuing a Bachelor's in Computer Science, focusing on software development, algorithms, and modern web technologies.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>ICS</h4>
+              <h5>2015 - 2017</h5>
+              <p><em>City College of Science and Commerce, Multan</em></p>
+              <p>Studied the fundamentals of computer science, gaining basic knowledge of programming and IT concepts.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
