--- a/index.html
+++ b/index.html
@@ -345,14 +345,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Web Developer</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Lahore, Pakistan</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li><strong>Project Management & Team Coordination:</strong> Independently manage website projects from conception to completion, assign tasks, and train juniors.</li>
+                <li><strong>Client Communication & Technical Translation:</strong> Effectively communicate with clients and team members, translating requirements into clear technical specifications.</li>
+                <li><strong>Web Development Expertise:</strong> Skilled in developing responsive websites using HTML, CSS, Bootstrap, and JavaScript, with experience in MySQL for data manipulation and retrieval.</li>
+                <li><strong>WordPress Development:</strong> Proficient in custom theme and plugin development, WooCommerce store setup, and working with the WordPress platform.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
