--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Web Developer</h4>
-              <h5>2022 - Present</h5>
+              <h5>Apr 2022 - Present</h5>
               <p><em>Lahore, Pakistan</em></p>
               <ul>
                 <li><strong>Project Management & Team Coordination:</strong> Independently manage website projects from conception to completion, assign tasks, and train juniors.</li>
@@ -355,16 +355,14 @@
                 <li><strong>WordPress Development:</strong> Proficient in custom theme and plugin development, WooCommerce store setup, and working with the WordPress platform.</li>
               </ul>
             </div><!-- Edn Resume Item -->
-
+            
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>WordPress Developer (Remote)</h4>
+              <h5>Feb 2024 - Feb 2025</h5>
+              <p><em>Remote</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li><strong>Website Development, Security & Customization:</strong> Converted Figma designs into Elementor pages, developed custom pages using HTML and CSS, cleared malware, and implemented a security checklist to ensure optimal performance and protection.</li>
+                <li><strong>System Integration & Website Management:</strong> Integrated an LMS into the website and independently managed client websites, delivering seamless functionality and timely updates.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
