--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <ul>
                 <li><strong>Project Management & Team Coordination:</strong> Independently manage website projects from conception to completion, assign tasks, and train juniors.</li>
                 <li><strong>Client Communication & Technical Translation:</strong> Effectively communicate with clients and team members, translating requirements into clear technical specifications.</li>
-                <li><strong>Web Development Expertise:</strong> Skilled in developing responsive websites using HTML, CSS, Bootstrap, and JavaScript, with experience in MySQL for data manipulation and retrieval.</li>
+                <li><strong>Web Development Expertise:</strong> Skilled in developing responsive websites using HTML, CSS, Bootstrap, JavaScript, and PHP, with experience in MySQL for data manipulation and retrieval.</li>
                 <li><strong>WordPress Development:</strong> Proficient in custom theme and plugin development, WooCommerce store setup, and working with the WordPress platform.</li>
               </ul>
             </div><!-- Edn Resume Item -->
