--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="resume-item">
               <h4>Web Developer</h4>
               <h5>Apr 2022 - Present</h5>
-              <p><em>Lahore, Pakistan</em></p>
+              <p><em>Technology Wisdom, Lahore, Pakistan</em></p>
               <ul>
                 <li><strong>Project Management & Team Coordination:</strong> Independently manage website projects from conception to completion, assign tasks, and train juniors.</li>
                 <li><strong>Client Communication & Technical Translation:</strong> Effectively communicate with clients and team members, translating requirements into clear technical specifications.</li>
@@ -359,9 +359,9 @@
             <div class="resume-item">
               <h4>WordPress Developer (Remote)</h4>
               <h5>Feb 2024 - Feb 2025</h5>
-              <p><em>Remote</em></p>
+              <p><em>TecBrix Cloud, Remote</em></p>
               <ul>
-                <li><strong>Website Development, Security & Customization:</strong> Converted Figma designs into Elementor pages, developed custom pages using HTML and CSS, cleared malware, and implemented a security checklist to ensure optimal performance and protection.</li>
+                <li><strong>Website Development, Security & Customization:</strong> Converted Figma designs into Elementor pages, developed custom pages using HTML and CSS, removed malware, and implemented a security checklist to ensure optimal performance and protection.</li>
                 <li><strong>System Integration & Website Management:</strong> Integrated an LMS into the website and independently managed client websites, delivering seamless functionality and timely updates.</li>
               </ul>
             </div><!-- Edn Resume Item -->
