--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Explore a collection of projects I've worked on, showcasing my expertise in WordPress development, custom themes, plugins, and web solutions. Each project reflects my commitment to functionality, performance, and seamless user experience.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
