--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-wordpress"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">WordPress Website Development</a></h4>
               <p class="description">Custom WordPress websites built with themes, page builders, and ACF to deliver high-performance, user-friendly solutions.</p>
@@ -572,7 +572,7 @@
           <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-cart-check-fill"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">WooCommerce Development</a></h4>
               <p class="description">Create and optimize WooCommerce stores with custom features, payment gateways, and seamless user experiences.</p>
@@ -580,7 +580,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-puzzle-fill"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">Custom WordPress Plugins</a></h4>
               <p class="description">Develop tailored WordPress plugins to enhance functionality, automate tasks, and improve website performance.</p>
@@ -588,7 +588,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-code-slash"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">HTML/CSS & Custom Websites</a></h4>
               <p class="description">Build responsive, SEO-friendly websites from scratch using HTML, CSS, Bootstrap, and JavaScript.</p>
@@ -596,7 +596,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-fill"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">Website Security & Malware Removal</a></h4>
               <p class="description">Strengthen website security, remove malware, and implement best practices to keep your site safe and optimized.</p>
@@ -604,7 +604,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-speedometer2"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">Website Migration & Performance Optimization</a></h4>
               <p class="description">Seamlessly migrate websites across servers while optimizing speed, performance, and database efficiency.</p>
