--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             <div class="icon flex-shrink-0"><i class="bi bi-wordpress"></i></div>
             <div>
               <h4 class="title"><a class="stretched-link">WordPress Website Development</a></h4>
-              <p class="description">Custom WordPress websites built with themes, page builders, and ACF to deliver high-performance, user-friendly solutions.</p>
+              <p class="description">Building high-performance WordPress websites using custom themes, pre-built themes, page builders (Elementor, WPBakery), and ACF for fully dynamic, scalable, and user-friendly solutions.</p>
             </div>
           </div>
           <!-- End Service Item -->
