--- a/index.html
+++ b/index.html
@@ -519,24 +519,12 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Books 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Diamond Supreme Foam</h4>
+                  <p>Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" title="Diamond Supreme Foam" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-diamond-supreme.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
