--- a/project-diamond-supreme.html
+++ b/project-diamond-supreme.html
@@ -137,7 +137,7 @@
                 <li><strong>Category</strong>: HTML/CSS/JavaScript</li>
                 <li><strong>Client</strong>: Diamond Supreme Foam</li>
                 <li><strong>Project date</strong>: December, 2023</li>
-                <li><strong>Project URL</strong>: <a href="www.diamondfoam.com/diamond-supreme-foam/" target="_blank">www.diamondfoam.com/diamond-supreme-foam/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://www.diamondfoam.com/diamond-supreme-foam/" target="_blank">www.diamondfoam.com/diamond-supreme-foam/</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
