--- a/project-diamond-supreme.html
+++ b/project-diamond-supreme.html
@@ -143,7 +143,7 @@
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Diamond Supreme Foam</h2>
               <p>
-                Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.
+                ✔ Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.
               </p>
             </div>
           </div>
