--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <li data-filter=".filter-app">WordPress Websites</li>
             <li data-filter=".filter-books">WordPress Plugins</li>
             <li data-filter=".filter-product">WordPress WooCommerce</li>
-            <li data-filter=".filter-branding">HTML/CSS/JavaScript</li>
+            <li data-filter=".htmlcssjavascript">HTML/CSS/JavaScript</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -517,7 +517,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item htmlcssjavascript">
               <div class="portfolio-content h-100">
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
