--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">WordPress Websites</li>
+            <li data-filter=".wordpress-website">WordPress Websites</li>
             <li data-filter=".filter-books">WordPress Plugins</li>
             <li data-filter=".filter-product">WordPress WooCommerce</li>
             <li data-filter=".htmlcssjavascript">HTML/CSS/JavaScript</li>
@@ -469,14 +469,14 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Branding 2</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>GM Panhwar Institute</h4>
+                  <p>A WordPress Custom Theme</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/hero-section.webp" title="GM Panhwar Institute" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-panhwar-institute.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
