--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Diamond Supreme Foam</h4>
-                  <p>Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.</p>
+                  <p>Revamped the entire theme using HTML, CSS, and JavaScript.</p>
                   <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" title="Diamond Supreme Foam" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/project-diamond-supreme.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
