--- a/project-panhwar-institute.html
+++ b/project-panhwar-institute.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Usama Khalid Portfolio</title>
+  <title>GM Panhwar Institute - Usama Khalid Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
