--- a/project-panhwar-institute.html
+++ b/project-panhwar-institute.html
@@ -134,17 +134,15 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: HTML/CSS/JavaScript</li>
-                <li><strong>Client</strong>: Diamond Supreme Foam</li>
-                <li><strong>Project date</strong>: December, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://www.diamondfoam.com/diamond-supreme-foam/" target="_blank">www.diamondfoam.com/diamond-supreme-foam/</a></li>
+                <li><strong>Category</strong>: WordPress Websites</li>
+                <li><strong>Client</strong>: GM Panhwar Institute</li>
+                <li><strong>Project date</strong>: October, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://drgmpanhwarinstitute.org/" target="_blank">drgmpanhwarinstitute.org</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Diamond Supreme Foam</h2>
-              <p>
-                ✔ Revamped the entire theme of this Magento CMS eCommerce store using HTML, CSS, and JavaScript.
-              </p>
+              <h2>GM Panhwar Institute</h2>
+              <p>✔ Designed and developed a WordPress website with a custom theme, built from a provided Figma design using HTML, CSS, and Bootstrap.</p>
             </div>
           </div>
 
