--- a/project-panhwar-institute.html
+++ b/project-panhwar-institute.html
@@ -114,15 +114,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/hero-section.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/hero-section.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/categories-section.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/services-section.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/diamond-supreme/footer-section.webp" alt="">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/books-section.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/gm-panhwar-institute/footer-section.webp" alt="">
                 </div>
 
               </div>
