--- a/index.html
+++ b/index.html
@@ -497,22 +497,22 @@
               <div class="portfolio-content h-100">
                 <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 3</h4>
+                  <h4>Parking Lot Repair NM</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/app-3.jpg" title="Parking Lot Repair NM" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item wordpress-website">
               <div class="portfolio-content h-100">
-                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+                <img src="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/temporary-fence/hero-section.webp" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Product 3</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://usamakhalid847.github.io/portfolio/portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Temporary Fence LLC</h4>
+                  <p>A custom WordPress theme with geolocation-based redirection</p>
+                  <a href="https://usamakhalid847.github.io/portfolio/assets/img/portfolio/temporary-fence/hero-section.webp" title="Temporary Fence LLC" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://usamakhalid847.github.io/portfolio/project-temporary-fence.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
